Fixed d3 resource import and added more to the surrounding structure of the graph

--- a/force-app/main/default/lwc/d3GanttChart/d3GanttChart.html
+++ b/force-app/main/default/lwc/d3GanttChart/d3GanttChart.html
@@ -1,3 +1,9 @@
 <template>
-    
+    <!-- Graph Container -->
+    <lightning-card title="Gantt Chart Calendar" class="slds-var-m-bottom_medium" icon-name="standard:lightning_usage">
+        <div class="slds-grid slds-grid_vertical chart-container">
+            <!-- Tag to be manipulated by D3 in js file -->
+            <div class="d3" lwc:dom="manual"></div>
+        </div>
+    </lightning-card>
 </template>
