Made some final touch-ups to the chart and settings

--- a/force-app/main/default/lwc/d3GanttChart/d3GanttChart.html
+++ b/force-app/main/default/lwc/d3GanttChart/d3GanttChart.html
@@ -1,6 +1,6 @@
 <template>
     <!-- Graph Container -->
-    <lightning-card title="Gantt Task Chart" class="slds-var-m-bottom_medium" icon-name="standard:lightning_usage">
+    <lightning-card title="Gantt Task Chart" class="slds-var-m-bottom_medium" icon-name="standard:lightning_usage" style="max-width: 700px;">
         <div class="chart-container">
             <!-- Tag to be manipulated by D3 in js file -->
             <div class="d3" lwc:dom="manual"></div>
